--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -26,6 +26,8 @@
 @import "blocks/portfolio";
 @import "blocks/footer";
 @import "blocks/btn";
+@import "blocks/pageup";
+@import "blocks/modal";
 @import "blocks/media";
 
 
