--- a/src/sass/blocks/_btn.scss
+++ b/src/sass/blocks/_btn.scss
@@ -10,5 +10,11 @@
     border: none;
     &:active,&:focus {
         outline: none; 
-    }    
+    } 
+    &__modal {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }   
 }
