--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,6 +1,6 @@
 .promo {
     background: url(../img/bg1.jpg)  no-repeat 50%/cover;   
-    min-height: 100vh;   
+    min-height: 700px;   
     position: relative;
     padding-top: 205px;
     
