--- a/src/sass/blocks/_about-me.scss
+++ b/src/sass/blocks/_about-me.scss
@@ -8,7 +8,7 @@
         justify-content: space-around;
     }
     &__body {
-        position:absolute;
+        position: absolute;
         background: url(../img/me1.png)  no-repeat 50%/cover; 
         z-index: 2;
     }
@@ -18,46 +18,21 @@
         line-height: 54px;
         color: #333333;
         text-align: center;
-        padding-top: 40px;
-        &:before {
-            position: relative;
-            content:'';
-            position: absolute;
-            width: 30px;
-            height: 30px;
-            background: $main-color;
-            border-radius: 100%;
-            top: 148px;
-            left: 790px;
-        }       
-    }
-
-    
-    &__subtitle {      
+        padding-top: 40px;      
+    }    
+    &__subtitle { 
+        position: relative;     
         color: #333333;
-        z-index: 3;
+        margin-left: 10px;                
         padding-right: 15px;
-        &:before {
-            position: relative;
-            content:'';
-            position: absolute;
-            width: 15px;
-            height: 15px;
-            background: $main-color;
-            border-radius: 100%;
-            top: 250px;
-            left: 711px;
+        margin-bottom: 10px;
+        margin-top: 10px;
+        @include before_circle;
+        z-index: 10;       
+        &:before {   
+            top: -5px;
+            left: -10px;
         }       
-        &:after {
-            content:'';
-            position: absolute;
-            width: 1px;
-            height: 234px;
-            left: 718px;
-            top: 265px;
-            z-index: 10;
-            background-color: #333333;
-        }
     }
     &__line {
         margin: 0 auto;
@@ -75,50 +50,16 @@
         margin-top: 40px;
         color: #fff;
         width: 550px;
-        margin-left: 50px;
+        margin-left: 50px;    
         z-index: 3;       
     }    
     &__text {
-        width: 480px;
+        width: 560px;
         color:#333333;
-        line-height: 35px;
-        margin: 0;
+        line-height: 40px;       
+        margin: 0;        
         padding: 0;        
-         &:before {
-            position: relative;           
-            content:'';
-            position: absolute;
-            width: 25px;
-            height: 25px;
-            background: $main-color;
-            border-radius: 100%;
-            top: 499px;
-            left: 708px;                 
-        }
-        span {
-            &:before { 
-                position: relative;          
-                content:'';            
-                position: absolute;
-                width: 15px;
-                height: 15px;
-                background: $main-color;
-                border-radius: 100%;
-                top: 503px;
-                left: 398px;                
-            }
-            &:after {
-                content:'';
-                position: absolute;
-                width: 295px;
-                height: 1px;
-                left: 413px;
-                top: 510px;
-                z-index: 10;
-                background-color: #333333;
-            }            
-        }       
-    }
+    }     
     &__bg {
         position: absolute;
         top: 185px;
