--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -58,7 +58,7 @@
             content: '';
             position: absolute;
             left: -25px;
-            top: 8px;
+            top: 6px;
             width: 15px;           
             height: 15px;
             border-radius: 100%;
@@ -71,6 +71,7 @@
             }
         }
         a {
+            
             color: #fff;
             text-decoration: none;
             transition: all 0.6s;
@@ -99,7 +100,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #fff;
+        background-color: rgba($color: #000000, $alpha: 0.56);
         opacity: .65;
     }        
 }
