--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,7 +1,6 @@
 *{
 	box-sizing: border-box;
 }
-
 @media screen and (max-width: 1200px) {
 	.container {
 		width: 960px;
@@ -827,8 +826,7 @@
 				margin-top: 20px;
 				width: 100%;
 				height: 100%;
-				object-fit: cover;			
-							
+				object-fit: cover;					
 			}        
 		}
 		&__form {
@@ -857,8 +855,7 @@
 		&__text {
 			font-size: 14px;
 			text-align: center;
-		}	
-			
+		}				
 		&__descr {
 			font-size: 14px;
 			text-align: center;
@@ -922,7 +919,6 @@
         width: 30px;
         height: 30px;
     }
-
 }
 @media screen and (max-width: 575px) {
 	.container {
@@ -958,7 +954,7 @@
 		}
 	}	
 	.promo {
-		padding-top: 180px;		
+		padding-top: 220px;		
 		&__btns {			
 			width: 240px;
 			height: 30px;
@@ -966,16 +962,16 @@
 			font-weight: 500;
 			margin: 0 auto;
 			padding-top: 30px;
-
 		}
 		&__link {
 			padding: 8px 5px 8px 5px;
 			font-size: 10px;
-			font-weight: 300;
+			font-weight: 500;
 		}
 		&__title {
 			width: 100%;
 			text-align: center;
+			font-size: 18px;		
 		}
 		&__subtitle {
 			margin: 0 auto;
@@ -988,7 +984,7 @@
 		}
 	}
 	.hamburger {
-		right: 27px;
+		right: 25px;
 		width: 30px;
 		span {
 			height: 2px;
@@ -1066,7 +1062,7 @@
 	}
 	.tools {		
 		&__title {
-			padding-top: 20px;
+			padding-top: 20px;	
 		}
 	}
 	.skills-ratings {
@@ -1109,6 +1105,85 @@
 			justify-content: space-evenly;
 			transition: .6s;
 		}		
+	}
+	.tools {
+		&__wrapper {		
+			row-gap: 0;
+			margin-top: 0;
+		}
+		&__subtitle {
+			&:before {
+				left: 40px;
+			}
+			&:after {
+				right: 40px;
+			}			
+		}
+		.panel {
+			margin-top: 0;
+			.card {
+				height: 160px;
+				width: 120px;
+			}
+			.slide {
+				height: 160px;
+				width: 110px;
+			}			
+			.border {
+				height: 150px;
+				width: 110px;			
+			}
+			.ring {
+				width: 60%;
+				font-size: 90px;			
+			}
+			.para {
+				font-size: 10px;
+				font-weight: 300;
+				line-height: 15px;
+				margin-top: 20px;		
+				width: 120px;
+			}			
+			.line11 {
+				h5 {
+					margin-top: -20px;
+					color: rgba(255, 255, 255, 0);
+				}				
+			}
+			.line12 {
+				h5 {					
+					margin-bottom: 10px;
+					color: rgba(255, 255, 255, 0);					
+				}				
+			}				
+			.line13 {
+				h5 {
+					margin-top: -10px;
+					color: rgba(255, 255, 255, 0);
+				}				
+			}	
+			.line14 {
+				h5 {
+					margin-top: -10px;
+					color: rgba(255, 255, 255, 0);						
+				}							
+			}
+			.line15 {
+				h5 {
+					margin-top: -10px;
+					color: rgba(255, 255, 255, 0);
+				}			
+			}	
+			.line16 {
+				h5	{
+					margin-top: -10px;
+					color: rgba(255, 255, 255, 0);
+				}					
+			}
+			h6 {
+				margin-top: 40px;
+			}			
+		}	
 	}
 	.footer {
 		min-height: 1050px;
@@ -1253,8 +1328,7 @@
 			grid-column-end: 2;
 			grid-row-start: 1;
 			grid-row-end: 2;
-			margin-top: 20px;
-				
+			margin-top: 20px;				
 		}
 		.btn {			
 			margin: 0 auto;
@@ -1322,106 +1396,9 @@
             min-height: 50px;
         }
     }	
-	.tools {
-		&__wrapper2 {
-			margin-top: 30px;
-		}
-		&__subtitle {
-			&:before {
-				left: 40px;
-			}
-			&:after {
-				right: 40px;
-			}			
-		}
-		.panel {
-			.card {
-				height: 160px;
-				width: 120px;
-			}
-			.slide {
-				height: 160px;
-				width: 110px;
-			}			
-			.border {
-				height: 150px;
-				width: 110px;			
-			}
-			.ring {
-				width: 60%;
-				font-size: 90px;			
-			}
-			.para {
-				font-size: 10px;
-				font-weight: 300;
-				line-height: 15px;
-				margin-top: 20px;		
-				width: 120px;
-			}			
-			.img__skills1 {
-				margin-bottom: 20px;
-			}
-			.img__skills2 {
-				margin-bottom: 20px;
-			}
-			.img__skills3 {
-				margin-bottom: 20px;
-			}
-			.img__skills4 {
-				margin-bottom: 20px;
-			}
-			.img__skills5 {
-				margin-bottom: 20px;
-			}
-			.img__skills6 {
-				margin-bottom: 20px;				
-			}			
-			.line11 {
-				h5 {
-					margin-top: -20px;
-					color: rgba(255, 255, 255, 0);
-				}				
-			}
-			.line12 {
-				h5 {					
-					margin-bottom: 10px;
-					color: rgba(255, 255, 255, 0);					
-				}				
-			}				
-			.line13 {
-				h5 {
-					margin-top: -10px;
-					color: rgba(255, 255, 255, 0);
-				}				
-			}	
-			.line14 {
-				h5 {
-					margin-top: -10px;
-					color: rgba(255, 255, 255, 0);						
-				}							
-			}
-			.line15 {
-				h5 {
-					margin-top: -10px;
-					color: rgba(255, 255, 255, 0);
-				}			
-			}	
-			.line16 {
-				h5	{
-					margin-top: -10px;
-					color: rgba(255, 255, 255, 0);
-				}
-					
-			}
-			h6 {
-				margin-top: 40px;
-			}		
 	
-		
-		}	
-	}
 	.pageup {
-        right: 28px;
+        right: 25px;
         bottom: 15px;
         width: 30px;
         height: 30px;
