--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -2,7 +2,7 @@
   position: fixed;
   min-height: 50px;
   width: 100vw;
-  background-color:rgba(16, 15, 13, 1); ;  
+  background-color: rgba(16, 15, 13, 1);   
   z-index: 100;
   .header__wrapper {
     display: flex;
